# backend/application/dto/review_dto.go
@@ -1,0 +1,13 @@
+package dto
+
+type CreateReviewRequest struct {
+	Rating  int    `json:"rating"`
+	Comment string `json:"comment"`
+}
+
+type ReviewResponse struct {
+	ProductID int64  `json:"product_id"`
+	Rating    int    `json:"rating"`
+	Comment   string `json:"comment"`
+	Status    string `json:"status"`
+}
